examples/test/testpolicy2364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2364
  namespace: namespace445
spec:
  podSelector:
    matchLabels:
      key45: value4
      key30: value25
      key39: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value41
      podSelector:
        matchLabels:
          key2: value22
          key19: value38
